# blowtorch-transformer-api

./: .gitignore  GPTQ_gpu_console.py  MANIFEST  README.md  bench.py  benchmark.py  benchmark_llama3_70B_gpu.py  benchmark_llama3_8B_gpu.py  benchmark_llama3_cpu.py  benchmark_llama3_gpu.py  bidenObamaTrump.py  build  build.py  flashtorch.py  gpt.py  gpt_cpu_console.py  gpt_gpu_console.py  install.py  pyproject.toml  rebuild.py  setup.py  test.py
blowtorch/: __init__.py  rag.py
blowtorch/static/: index.html  script.js  style.css
examples/: arnold.py  arnold_cpu.py  assistant.py  bidenObamaTrump.py  chatGPT.py  classification.py  demo.py  gpt-llama-3-8B-cpu.py  gpt-llama-3-8B-gpu.py  lisa.py  llama3.2_3B_gpt_cpu_console.py  llama3_8B_gpt_cpu_console.py  llama3_8B_gpt_vllm_console.py  llama3_8B_yoda_scenario_cpu_webui.py  llama3_GPT.py  llama3_GPT_GPU.py  llama3_GPT_GPU_console.py  mistral_7B_gpt_cpu_webui.py  scenario.py  tyrone.py  vicuna7B.py  vllm_gpt.py  yoda.py
flashtorch/: __init__.py
llama2cpu/: README.md
